# src/app/ai-knowledge-base/pages/ai-knowledge-base-search/dialogs/aiknowledge-base-create-update/aiknowledge-base-create-update.viewmodel.ts
@@ -1,5 +1,5 @@
-import { AiKnowledgeBase } from 'src/app/shared/generated'
+import { AIKnowledgeBase } from 'src/app/shared/generated'
 
 export interface AIKnowledgeBaseCreateUpdateViewModel {
-  itemToEdit: AiKnowledgeBase | undefined
+  itemToEdit: AIKnowledgeBase | undefined
 }
